--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+:root{
+  --mainDark: #343a40;
+  --mainGrey: rgb(255, 255, 255);
+  --mainLightGrey: rgba(172,172,172);
+  --mainWhite: #fff;
+  --mainBlue: #007bff;
+}
+
 .App {
   text-align: center;
 }
